# NetGuard

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: NetGuard_PRD_v1.0.md  README_EN.md  Refactor_Plan.md
docs/plans/: 2026-03-03-security-hardening.md  2026-03-04-quality-audit-fixes-design.md
scripts/: emergency-recovery.ps1  emergency-recovery.sh  watchdog.ps1  watchdog.sh
src/: App.tsx  bindings.ts  styles.css  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  services.rs
src-tauri/src/capture/: mod.rs  pf_backend.rs  windivert_backend.rs
src-tauri/src/commands/: logic.rs  mod.rs  rules.rs  state.rs  system.rs  traffic.rs
src-tauri/src/core/: icon_extractor.rs  mod.rs  process_mapper.rs  rate_limiter.rs  traffic.rs  win_net_table.rs
src-tauri/src/db/: history.rs  mod.rs  rules.rs
src/__mocks__/@tauri-apps/api/: event.ts
src/components/: ChartPanel.tsx  ContextMenu.tsx  Header.tsx  HistoryChart.tsx  LiveSpeedChart.tsx  ProcessTable.tsx  ProfileBar.tsx  SettingsPanel.tsx  StatusBar.tsx
src/components/ui/: Badge.test.tsx  Badge.tsx  CtxItem.tsx  LimitCell.tsx  SettingToggle.tsx  Th.tsx  Toggle.test.tsx  Toggle.tsx
src/hooks/: useChartData.ts  useProfiles.ts  useSettings.test.ts  useSettings.ts  useTrafficData.ts
