[package]
name = "netguard"
version = "0.1.0"
description = "Cross-platform network traffic monitor & bandwidth controller"
authors = ["you"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "netguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
governor = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windivert = { version = "0.6", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["net"] }
